# ReversiServer

./: .gitignore  CMakeLists.txt  CloseCommand.cpp  CloseCommand.h  CloseServerCommand.cpp  CloseServerCommand.h  Command.h  CommandsManager.cpp  CommandsManager.h  GameRoom.cpp  GameRoom.h  GameRoomsController.cpp  GameRoomsController.h  JoinCommand.cpp  JoinCommand.h  ListOfGamesCommand.cpp  ListOfGamesCommand.h  PlayCommand.cpp  PlayCommand.h  README.md  ReversiServerLog.txt  Server.cpp  Server.h  StartCommand.cpp  StartCommand.h  Task.h  Threadpool.cpp  Threadpool.h  main.cpp
